[package]
name = "qiwi"
version = "0.1.0"
description = "Qiwi API library"
categories = ["api"]
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
async-stream = "0.3"
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
headers = "0.3"
http = "0.2"
itertools = "0.11"
maplit = "1"
penny = "0.2"
phonenumber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
reqwest-ext = { git = "https://github.com/vorot93/reqwest-ext" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
